--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,3 +1,5 @@
+
+
 <ion-header>
   <ion-toolbar>
     <ion-title>home</ion-title>
@@ -5,5 +7,134 @@
 </ion-header>
 
 <ion-content>
+  
+  <ion-grid>
+
+    <ion-row> 
+      <ion-col>
+        <button id="open-agendar">
+          <ion-card>
+            <img alt="Silhouette of mountains" src="https://cdn-icons-png.flaticon.com/512/2001/2001546.png" />
+            <ion-card-header>
+              <ion-card-title>Agendamento</ion-card-title>
+            </ion-card-header>
+          </ion-card>
+        </button>
+        <ion-modal #modal trigger="open-agendar" [canDismiss]="canDismiss" [presentingElement]="presentingElement">
+          <ng-template>
+            <ion-header>
+              <ion-toolbar>
+                <ion-title>Agendamento</ion-title>
+                <ion-buttons slot="end">
+                  <ion-button (click)="modal.dismiss()">Close</ion-button>
+                </ion-buttons>
+              </ion-toolbar>
+              <ion-searchbar></ion-searchbar>
+            </ion-header>
+            <ion-content class="ion-padding">
+              <ion-list> 
+                <ion-item> 
+                  <ion-thumbnail slot="start">
+                    <img alt="Silhouette of mountains" src="https://ogimg.infoglobo.com.br/cultura/24768542-59c-6dc/FT1086A/zecapagodinho.jpg" />
+                  </ion-thumbnail>
+                  <ion-label>Clínica do ZECA</ion-label>
+                </ion-item>
+              </ion-list>
+            </ion-content>
+          </ng-template>
+        </ion-modal>
+      </ion-col>
+    </ion-row>
+      
+    <ion-row>
+      <ion-col>
+        <button id="open-historico">
+          <ion-card>
+            <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+            <ion-card-header>
+              <ion-card-title>Histórico</ion-card-title>
+            </ion-card-header>
+          </ion-card>
+        </button>
+        <ion-modal #modal trigger="open-historico" [canDismiss]="canDismiss" [presentingElement]="presentingElement">
+          <ng-template>
+            <ion-header>
+              <ion-toolbar>
+                <ion-title>Histórico</ion-title>
+                <ion-buttons slot="end">
+                  <ion-button (click)="modal.dismiss()">Close</ion-button>
+                </ion-buttons>
+              </ion-toolbar>
+            </ion-header>
+            <ion-content class="ion-padding">
+              <p>You will be prompted when closing this modal.</p>
+            </ion-content>
+          </ng-template>
+        </ion-modal>
+      </ion-col>
+    </ion-row>
+
+  </ion-grid>
+  <ion-grid>
+
+    <ion-row> 
+      <ion-col>
+        <button id="open-clinica">
+          <ion-card>
+            <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+            <ion-card-header>
+              <ion-card-title>Clinicas</ion-card-title>
+            </ion-card-header>
+          </ion-card>
+        </button>
+        <ion-modal #modal trigger="open-clinica" [canDismiss]="canDismiss" [presentingElement]="presentingElement">
+          <ng-template>
+            <ion-header>
+              <ion-toolbar>
+                <ion-title>Clínicas</ion-title>
+                <ion-buttons slot="end">
+                  <ion-button (click)="modal.dismiss()">Close</ion-button>
+                </ion-buttons>
+              </ion-toolbar>
+            </ion-header>
+            <ion-content class="ion-padding">
+              <p>You will be prompted when closing this modal.</p>
+            </ion-content>
+          </ng-template>
+        </ion-modal>  
+      </ion-col>
+
+      <ion-col>
+        <button id="open-modal">
+          <ion-card>
+            <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+            <ion-card-header>
+              <ion-card-title>Não Sei</ion-card-title>
+            </ion-card-header>
+          </ion-card>
+        </button>
+        <ion-modal #modal trigger="open-modal" [canDismiss]="canDismiss" [presentingElement]="presentingElement">
+          <ng-template>
+            <ion-header>
+              <ion-toolbar>
+                <ion-title>Não sei</ion-title>
+                <ion-buttons slot="end">
+                  <ion-button (click)="modal.dismiss()">Close</ion-button>
+                </ion-buttons>
+              </ion-toolbar>
+            </ion-header>
+            <ion-content class="ion-padding">
+              <p>You will be prompted when closing this modal.</p>
+            </ion-content>
+          </ng-template>
+        </ion-modal> 
+      </ion-col>
+    </ion-row>
+
+  </ion-grid>
+  
+  
 
 </ion-content>
+
+
