--- a/src/app/pages/clinica/clinica.page.html
+++ b/src/app/pages/clinica/clinica.page.html
@@ -5,5 +5,15 @@
 </ion-header>
 
 <ion-content>
+  <!-- <ion-card>
+    <ion-card-header>
+      <ion-card-title>{{produto.produto}}</ion-card-title>
+      <ion-card-subtitle><strong>Quantidade:</strong> Serve {{produto.quantidade}}</ion-card-subtitle>
+      <ion-card-subtitle><strong>Ingredientes:</strong> {{produto.ingredientes}}</ion-card-subtitle>
+    </ion-card-header>
+
+    <ion-card-content><strong>Preparo:</strong> {{produto.preparo}}</ion-card-content>
+    
+  </ion-card> -->
 
 </ion-content>
