--- a/src/app/pages/clinica/clinica.page.html
+++ b/src/app/pages/clinica/clinica.page.html
@@ -1,19 +1,86 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>  
     <ion-title>clinica</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <!-- <ion-card>
-    <ion-card-header>
-      <ion-card-title>{{produto.produto}}</ion-card-title>
-      <ion-card-subtitle><strong>Quantidade:</strong> Serve {{produto.quantidade}}</ion-card-subtitle>
-      <ion-card-subtitle><strong>Ingredientes:</strong> {{produto.ingredientes}}</ion-card-subtitle>
-    </ion-card-header>
-
-    <ion-card-content><strong>Preparo:</strong> {{produto.preparo}}</ion-card-content>
+  <button id="clinica">
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Clínicas parceiras</ion-card-title>
+      </ion-card-header>
     
-  </ion-card> -->
+      <ion-card-content>
+        Clique aqui e conheça todas as nossas clínicas parceiras e veja sua classificação!
+      </ion-card-content>
+    </ion-card>
+  </button>
+  <ion-modal #modal trigger="clinica" [presentingElement]="presentingElement">
+    <ng-template>
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>Modal</ion-title>
+          <ion-buttons slot="end">
+            <ion-button (click)="modal.dismiss()">Close</ion-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content>
+        <ion-list>
+          <ion-item>
+            <ion-avatar slot="start">
+              <ion-img src="https://i.pravatar.cc/300?u=b"></ion-img>
+            </ion-avatar>
+            <ion-label>
+              <h2>Connor Smith</h2>
+              <p>Sales Rep</p>
+            </ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-avatar slot="start">
+              <ion-img src="https://i.pravatar.cc/300?u=a"></ion-img>
+            </ion-avatar>
+            <ion-label>
+              <h2>Daniel Smith</h2>
+              <p>Product Designer</p>
+            </ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-avatar slot="start">
+              <ion-img src="https://i.pravatar.cc/300?u=d"></ion-img>
+            </ion-avatar>
+            <ion-label>
+              <h2>Greg Smith</h2>
+              <p>Director of Operations</p>
+            </ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-avatar slot="start">
+              <ion-img src="https://i.pravatar.cc/300?u=e"></ion-img>
+            </ion-avatar>
+            <ion-label>
+              <h2>Zoey Smith</h2>
+              <p>CEO</p>
+            </ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
 
+  <button (click)="alertando()">
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Cadastro de Clínicas</ion-card-title>
+      </ion-card-header>
+    
+      <ion-card-content>
+        Clique aqui e faça o cadastro da sua clínica.
+      </ion-card-content>
+    </ion-card>
+  </button>
 </ion-content>
