--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,7 +1,8 @@
-
-
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>  
     <ion-title>home</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -64,7 +65,7 @@
 
     <ion-row> 
       <ion-col>
-        <button [routerLink]="['/clinicas']">
+        <button [routerLink]="['/clinica']">
           <ion-card>
             <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
             <ion-card-header>
