--- a/src/app/pages/clinica/clinica.page.html
+++ b/src/app/pages/clinica/clinica.page.html
@@ -1,8 +1,8 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>  
+      <ion-back-button text="Voltar"></ion-back-button>
+    </ion-buttons>
     <ion-title>clinica</ion-title>
   </ion-toolbar>
 </ion-header>
