--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -8,19 +8,30 @@
 </ion-header>
 
 <ion-content>
+
+  <!-- <ion-grid>
+    <ion-row>
+      <ion-col size="6" size-md="4" size-lg="2">1</ion-col>
+      <ion-col size="6" size-md="4" size-lg="2">2</ion-col>
+      <ion-col size="6" size-md="4" size-lg="2">3</ion-col>
+      <ion-col size="6" size-md="4" size-lg="2">4</ion-col>
+      <ion-col size="6" size-md="4" size-lg="2">5</ion-col>
+      <ion-col size="6" size-md="4" size-lg="2">6</ion-col>
+    </ion-row>
+  </ion-grid> -->
   
   <ion-grid>
-
-    <ion-row> 
-      <ion-col>
+    <ion-row>
+    <ion-col size="6">
         <button id="open-agendar">
           <ion-card>
-            <img alt="Silhouette of mountains" src="https://cdn-icons-png.flaticon.com/512/2001/2001546.png" />
+            <img alt="Silhouette of mountains" src="assets/img/marcarconsulta.png" />
             <ion-card-header>
               <ion-card-title>Agendamento</ion-card-title>
             </ion-card-header>
           </ion-card>
         </button>
+      </ion-col>
         <ion-modal #modal trigger="open-agendar" [canDismiss]="canDismiss" [presentingElement]="presentingElement">
           <ng-template>
             <ion-header>
@@ -44,30 +55,24 @@
             </ion-content>
           </ng-template>
         </ion-modal>
-      </ion-col>
-    </ion-row>
-      
-    <ion-row>
-      <ion-col>
+ 
+
+      <ion-col size="6">
         <button [routerLink]="['/historico']">
           <ion-card>
-            <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+            <img alt="Silhouette of mountains" src="assets/img/histórico.png"   />
             <ion-card-header>
               <ion-card-title>Histórico</ion-card-title>
             </ion-card-header>
           </ion-card>
         </button>
       </ion-col>
-    </ion-row>
 
-  </ion-grid>
-  <ion-grid>
 
-    <ion-row> 
-      <ion-col>
+      <ion-col size="6">
         <button [routerLink]="['/clinica']">
           <ion-card>
-            <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+            <img alt="Silhouette of mountains" src="assets/img/clinicas.png" />
             <ion-card-header>
               <ion-card-title>Clinicas</ion-card-title>
             </ion-card-header>
@@ -76,7 +81,7 @@
         
       </ion-col>
 
-      <ion-col>
+      <ion-col size="6">
         <button id="open-modal">
           <ion-card>
             <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
@@ -85,9 +90,9 @@
             </ion-card-header>
           </ion-card>
         </button>
-      </ion-col>
-    </ion-row>
+      </ion-col>  
 
+      </ion-row>
   </ion-grid>
   
   
