--- a/src/app/pages/suporte/suporte.page.html
+++ b/src/app/pages/suporte/suporte.page.html
@@ -8,7 +8,13 @@
 </ion-header>
 
 <ion-content>  
-    <ion-button id="openmodal" expand="block">FAÇA SUA REQUISIÇÃO</ion-button>
+
+  <ion-card>
+    <ion-card-header>
+      <img src="assets/img/suporte.png"/>  
+    </ion-card-header>  
+    <ion-card-content>
+      <ion-button id="openmodal" expand="block">FAÇA SUA REQUISIÇÃO</ion-button>
     <p>{{ message }}</p>
     <ion-modal trigger="openmodal" (willDismiss)="onWillDismiss($event)">
       <ng-template>
@@ -17,7 +23,7 @@
             <ion-buttons slot="start">
               <ion-button (click)="cancel()">Cancelar</ion-button>
             </ion-buttons>
-            <ion-title>Welcome</ion-title>
+            <ion-title><strong>REQUISIÇÃO</strong></ion-title>
             <ion-buttons slot="end">
               <ion-button (click)="confirm()" [strong]="true">Confirmar</ion-button>
             </ion-buttons>
@@ -31,18 +37,28 @@
             <ion-input type="text" placeholder="Seu email" [(ngModel)]="email"></ion-input>
             <ion-label position="stacked">Entre com seu telefone</ion-label>
             <ion-input type="phone" placeholder="Seu telefone" [(ngModel)]="telefone"></ion-input>
+           
+
+
+
+
+
+
+
+
+
           </ion-item>
         </ion-content>
       </ng-template>
     </ion-modal>
 
-   
     <ion-button id="open-modal1" expand="block">ACOMPANHAR REQUISIÇÃO</ion-button>
+    <p>{{ message2 }}</p>
     <ion-modal #modal trigger="open-modal1" [presentingElement]="presentingElement">
       <ng-template>
         <ion-header>
           <ion-toolbar>
-            <ion-title>Modal</ion-title>
+            <ion-title><strong>ACOMPANHE</strong></ion-title>
             <ion-buttons slot="end">
               <ion-button (click)="modal.dismiss()">FECHAR</ion-button>
             </ion-buttons>
@@ -92,26 +108,58 @@
     </ion-modal>
 
     <ion-button expand="block" (click)="setOpen(true)">MEIOS DE CONTATO</ion-button>
+    <p>{{ message3 }}</p>
     <ion-modal [isOpen]="isModalOpen">
       <ng-template>
         <ion-header>
           <ion-toolbar>
-            <ion-title>Modal</ion-title>
+            <ion-title><strong>CONTATO</strong></ion-title>
             <ion-buttons slot="end">
-              <ion-button (click)="setOpen(false)">Close</ion-button>
+              <ion-button (click)="setOpen(false)">Fechar</ion-button>
             </ion-buttons>
           </ion-toolbar>
         </ion-header>
         <ion-content class="ion-padding">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni illum quidem recusandae ducimus quos
-            reprehenderit. Veniam, molestias quos, dolorum consequuntur nisi deserunt omnis id illo sit cum qui. Eaque,
-            dicta.
-          </p>
+          <img src="assets/img/contato.png"/> 
+          <ion-list>
+
+            <ion-item>
+            <ion-label>Email</ion-label> 
+              <ion-list>
+              <ion-label>medconfiaspt@confia.com</ion-label>
+            </ion-list>
+            </ion-item>
+            <ion-item>
+              <ion-label>Telefone</ion-label>
+              <ion-label>(21)4002-8922</ion-label>
+            </ion-item>
+            <ion-item>
+              <ion-label>Redes sociais</ion-label>
+              <ion-list>
+              <ion-label>Twitter:@med_confia</ion-label>
+              <ion-label>Instagram:@medconfia</ion-label>
+            </ion-list>
+            </ion-item>
+            <ion-item>
+              <ion-label>Whatsapp</ion-label>
+              <ion-label>(21)98877-6655</ion-label>
+            </ion-item>
+          </ion-list>
         </ion-content>
       </ng-template>
     </ion-modal>
 
+    </ion-card-content>
+  </ion-card>
+
+
+
+
+
+    
+
+   
+    
 
 
 
