--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -44,14 +44,21 @@
               <ion-searchbar></ion-searchbar>
             </ion-header>
             <ion-content class="ion-padding">
+
               <ion-list> 
-                <ion-item> 
+                <ion-item-sliding *ngFor="let clinicas of listaClinicas">
+                <button>
+                  <!-- <ion-item (click)="agendar(clinicas)">  -->
+                  <ion-item> 
                   <ion-thumbnail slot="start">
-                    <img alt="Silhouette of mountains" src="https://ogimg.infoglobo.com.br/cultura/24768542-59c-6dc/FT1086A/zecapagodinho.jpg" />
+                    <img alt="Clinicas" src="https://images.emojiterra.com/openmoji/v13.1/512px/1f3e5.png" />
                   </ion-thumbnail>
-                  <ion-label>Clínica do ZECA</ion-label>
+                  <ion-label>{{clinicas.nomeclinica}}</ion-label>
                 </ion-item>
+              </button>
+                </ion-item-sliding>
               </ion-list>
+
             </ion-content>
           </ng-template>
         </ion-modal>
