--- a/src/app/pages/tour/tour.page.html
+++ b/src/app/pages/tour/tour.page.html
@@ -39,14 +39,14 @@
             </ion-header>
             <ion-content class="ion-padding">
               <ion-card>
-                <form>
+                <!-- <form [formGroup]="form" (submit)="formulario()"> -->
                     <ion-item lines="full">
                         <ion-label position="floating">CPF</ion-label>
-                        <ion-input type="number" required></ion-input>
+                        <ion-input type="number" required formControlName="email"></ion-input>
                       </ion-item>
                       <ion-item lines="full">
                         <ion-label position="floating">Senha</ion-label>
-                        <ion-input  type="password" required></ion-input>
+                        <ion-input  type="password" required formControlName="password"></ion-input>
                       </ion-item>
                     <ion-grid>  
                       <ion-row>
@@ -56,7 +56,7 @@
        
                         </ion-row>
                     </ion-grid>  
-                </form>
+                <!-- </form> -->
               </ion-card>
             </ion-content>
           </ng-template>
