--- a/src/app/pages/clinica/clinica.page.html
+++ b/src/app/pages/clinica/clinica.page.html
@@ -40,33 +40,6 @@
               <p>Sales Rep</p>
             </ion-label>
           </ion-item>
-          <ion-item>
-            <ion-avatar slot="start">
-              <ion-img src="https://i.pravatar.cc/300?u=a"></ion-img>
-            </ion-avatar>
-            <ion-label>
-              <h2>Daniel Smith</h2>
-              <p>Product Designer</p>
-            </ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-avatar slot="start">
-              <ion-img src="https://i.pravatar.cc/300?u=d"></ion-img>
-            </ion-avatar>
-            <ion-label>
-              <h2>Greg Smith</h2>
-              <p>Director of Operations</p>
-            </ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-avatar slot="start">
-              <ion-img src="https://i.pravatar.cc/300?u=e"></ion-img>
-            </ion-avatar>
-            <ion-label>
-              <h2>Zoey Smith</h2>
-              <p>CEO</p>
-            </ion-label>
-          </ion-item>
         </ion-list>
       </ion-content>
     </ng-template>
@@ -77,10 +50,47 @@
       <ion-card-header>
         <ion-card-title>Cadastro de Clínicas</ion-card-title>
       </ion-card-header>
-    
       <ion-card-content>
         Clique aqui e faça o cadastro da sua clínica.
       </ion-card-content>
     </ion-card>
   </button>
+
+  <button expand="block" (click)="setOpen(true)">
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Excluimento de clínicas</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        Clique aqui para excluir uma clínica!
+      </ion-card-content>
+    </ion-card>  
+  </button>
+  <ion-modal [isOpen]="isModalOpen">
+    <ng-template>
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>Modal</ion-title>
+          <ion-buttons slot="end">
+            <ion-button (click)="setOpen(false)">Close</ion-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content class="ion-padding">
+        <ion-list> 
+          <ion-item-sliding *ngFor="let clinicas of listaClinicas">
+          <button>
+            <!-- <ion-item (click)="agendar(clinicas)">  -->
+            <ion-item> 
+              <ion-checkbox slot="start"></ion-checkbox>
+            
+          </ion-item>
+        </button> 
+          </ion-item-sliding>
+        </ion-list>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
+
+
 </ion-content>
