--- a/src/app/pages/suporte/suporte.page.html
+++ b/src/app/pages/suporte/suporte.page.html
@@ -6,7 +6,6 @@
     <ion-title><strong>SUPORTE</strong></ion-title>
   </ion-toolbar>
 </ion-header>
-
 <ion-content>  
 
   <ion-card>
@@ -39,31 +38,17 @@
               <button>
                 <!-- <ion-item (click)="agendar(clinicas)">  -->
                 <ion-item> 
-                  <ion-checkbox slot="start"></ion-checkbox>
                 <ion-label>{{clinicas.nomeclinica}}</ion-label>
               </ion-item>
             </button> 
               </ion-item-sliding>
             </ion-list>
-            
-        
 
             <ion-label position="stacked">Assunto da requisição</ion-label>
             <ion-input type="text" placeholder="assunto" [(ngModel)]="assunto"></ion-input>
 
-
             <ion-label position="stacked">Email</ion-label>
             <ion-input type="email" placeholder="email@email.com" [(ngModel)]="email"></ion-input>
-           
-            
-             
-
-
-
-
-
-
-
 
           </ion-item>
         </ion-content>
@@ -84,41 +69,18 @@
         </ion-header>
         <ion-content>
           <ion-list>
-            <ion-item>
+            <ion-item *ngFor="let clinicas of listaClinicas">
               <ion-avatar slot="start">
-                <ion-img src="https://i.pravatar.cc/300?u=b"></ion-img>
+                <ion-img src="https://cdn-icons-png.flaticon.com/512/4526/4526821.png"></ion-img>
               </ion-avatar>
               <ion-label>
-                <h2>Connor Smith</h2>
-                <p>Sales Rep</p>
-              </ion-label>
-            </ion-item>
-            <ion-item>
-              <ion-avatar slot="start">
-                <ion-img src="https://i.pravatar.cc/300?u=a"></ion-img>
-              </ion-avatar>
+                {{clinicas.nomeclinica}}   
+               </ion-label>          
+               <ion-item *ngFor="let clientes of listaClientes">
               <ion-label>
-                <h2>Daniel Smith</h2>
-                <p>Product Designer</p>
-              </ion-label>
-            </ion-item>
-            <ion-item>
-              <ion-avatar slot="start">
-                <ion-img src="https://i.pravatar.cc/300?u=d"></ion-img>
-              </ion-avatar>
-              <ion-label>
-                <h2>Greg Smith</h2>
-                <p>Director of Operations</p>
-              </ion-label>
-            </ion-item>
-            <ion-item>
-              <ion-avatar slot="start">
-                <ion-img src="https://i.pravatar.cc/300?u=e"></ion-img>
-              </ion-avatar>
-              <ion-label>
-                <h2>Zoey Smith</h2>
-                <p>CEO</p>
-              </ion-label>
+                {{clientes.nomecliente}}
+               </ion-label>
+              </ion-item>                        
             </ion-item>
           </ion-list>
         </ion-content>
