--- a/src/app/pages/tour/tour.page.html
+++ b/src/app/pages/tour/tour.page.html
@@ -39,10 +39,11 @@
             </ion-header>
             <ion-content class="ion-padding">
               <ion-card>
-                <!-- <form [formGroup]="form" (submit)="formulario()"> -->
+
+                <form [formGroup]="form" (submit)="formulario()">
                     <ion-item lines="full">
-                        <ion-label position="floating">CPF</ion-label>
-                        <ion-input type="number" required formControlName="email"></ion-input>
+                        <ion-label position="floating">Email</ion-label>
+                        <ion-input type="email" required formControlName="email"></ion-input>
                       </ion-item>
                       <ion-item lines="full">
                         <ion-label position="floating">Senha</ion-label>
@@ -51,12 +52,13 @@
                     <ion-grid>  
                       <ion-row>
                         <ion-col>
-                          <ion-button type="submit" color="primary" (click)="confirm()" [strong]="true" [routerLink]="['/home']" expand="block">Entrar</ion-button>
+                          <ion-button type="submit" color="primary" [strong]="true" expand="block">Entrar</ion-button>
                         </ion-col>
        
                         </ion-row>
                     </ion-grid>  
-                <!-- </form> -->
+                </form>
+
               </ion-card>
             </ion-content>
           </ng-template>
