--- a/src/app/pages/historico/historico.page.html
+++ b/src/app/pages/historico/historico.page.html
@@ -8,23 +8,32 @@
 </ion-header>
 
 <ion-content>
+
+  <ion-list> 
+    <ion-item-sliding *ngFor="let agendamentos of listaAgendamentos">
   
-  <ion-list>
-    <ion-item>
-      <ion-label>Pokémon Yellow</ion-label>
+      <!-- <ion-item (click)="agendar(clinicas)">  -->
+      <ion-card>
+        <ion-item>
+        <ion-thumbnail>
+          <img alt="Silhouette of mountains" src="https://cdn-icons-png.flaticon.com/512/4670/4670466.png" />
+        </ion-thumbnail> 
+        <ion-card-header>
+        <ion-card-subtitle><strong>Consulta:</strong> {{agendamentos.id}}</ion-card-subtitle>
+        <ion-card-title><strong>Paciente:</strong> {{agendamentos.nomecliente}}</ion-card-title>
+        <ion-card-subtitle><strong>Clinica:</strong> {{agendamentos.nomeclinica}}</ion-card-subtitle>
+        <ion-card-subtitle><strong>Especialidade:</strong> {{agendamentos.especialidade}}</ion-card-subtitle>
+        <ion-card-subtitle><strong>Data:</strong> {{agendamentos.data}}</ion-card-subtitle>
+        <ion-card-subtitle><strong>Horário:</strong> {{agendamentos.horario}}</ion-card-subtitle>
+      </ion-card-header>
+       
+
     </ion-item>
-    <ion-item>
-      <ion-label>Mega Man X</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>The Legend of Zelda</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>Pac-Man</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>Super Mario World</ion-label>
-    </ion-item>
-  </ion-list>  
+  </ion-card>
+
+    </ion-item-sliding>
+  </ion-list>
+  
+    
 
 </ion-content>
