--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -12,12 +12,12 @@
   
   <ion-grid>
     <ion-row>
-    <ion-col size="8" offset="2">
+    <ion-col size="10" offset="1">
         <button [routerLink]="['/agendamento']">
           <ion-card>
-            <img alt="Silhouette of mountains" src="assets/img/marcarconsulta.png" />
+            <img alt="Agendamento" src="assets/img/marcarconsulta.png" />
             <ion-card-header>
-              <ion-card-title>Agendamento</ion-card-title>
+              <ion-card-title><strong>Agendamento</strong></ion-card-title>
             </ion-card-header>
           </ion-card>
         </button>
@@ -27,28 +27,28 @@
 
   <ion-grid>   
     <ion-row>    
-      <ion-col size="8" offset="2">
+      <ion-col size="10" offset="1">
         <button [routerLink]="['/historico']">
           <ion-card>
-            <img alt="Silhouette of mountains" src="assets/img/histórico.png"   />
+            <img alt="Historico" src="assets/img/histórico.png"   />
             <ion-card-header>
-              <ion-card-title>Histórico</ion-card-title>
+              <ion-card-title><strong>Histórico</strong></ion-card-title>
             </ion-card-header>
           </ion-card>
         </button>
       </ion-col>
     </ion-row> 
-  <ion-grid>  
+  </ion-grid>  
     
 
   <ion-grid>
     <ion-row > 
-      <ion-col size="8" offset="2">
+      <ion-col size="10" offset="1">
         <button [routerLink]="['/clinica']">
           <ion-card>
-            <img alt="Silhouette of mountains" src="assets/img/clinicas.png" />
+            <img alt="Clinicas"  src="assets/img/clinicas.png" />
             <ion-card-header>
-              <ion-card-title>Clinicas</ion-card-title>
+              <ion-card-title><strong>Clinicas</strong></ion-card-title>
             </ion-card-header>
           </ion-card>
         </button>
