--- a/src/app/pages/suporte/suporte.page.html
+++ b/src/app/pages/suporte/suporte.page.html
@@ -48,7 +48,7 @@
       
               <ion-item >
                 <ion-label position="stacked">Assunto da requisição</ion-label>
-              <ion-input type="text" placeholder="assunto" [(ngModel)]="assunto"></ion-input>
+              <ion-textarea type="text" placeholder="Assunto" [(ngModel)]="assunto"></ion-textarea>
               </ion-item>
 
             
