--- a/src/app/pages/tour/tour.page.html
+++ b/src/app/pages/tour/tour.page.html
@@ -43,13 +43,13 @@
 
     <ion-item>
       <ion-label position="stacked">Email</ion-label>
-      <ion-input [(ngModel)]='email'></ion-input>
+      <ion-input type="email" [(ngModel)]='email'></ion-input>
     </ion-item>
     <br>
 
     <ion-item>
       <ion-label position="stacked">Password</ion-label>
-      <ion-input [(ngModel)]='password'></ion-input>
+      <ion-input type="password" [(ngModel)]='password'></ion-input>
     </ion-item>
 
     <ion-button (click)='login()' expand='block'>Login</ion-button>
