--- a/src/app/pages/cadastro-clinica/cadastro-clinica.page.html
+++ b/src/app/pages/cadastro-clinica/cadastro-clinica.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button text="Voltar"></ion-back-button>
+    </ion-buttons>
     <ion-title>cadastro_clinica</ion-title>
   </ion-toolbar>
 </ion-header>
