--- a/src/app/pages/tour/tour.page.html
+++ b/src/app/pages/tour/tour.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>tour</ion-title>
+    <ion-title>Inicio</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -31,15 +31,17 @@
             <ion-header>
               <ion-toolbar>
                 <ion-buttons slot="start">
-                  <ion-button (click)="cancel()">Cancel</ion-button>
+                  <ion-button (click)="cancel()">Cancelar</ion-button>
                 </ion-buttons>
-                <ion-title>Welcome</ion-title>
+                <ion-title>LOGIN</ion-title>
 
               </ion-toolbar>
             </ion-header>
             <ion-content class="ion-padding">
               <ion-card>
-                <div class="form">
+
+
+<div class="form">
 
     <ion-item>
       <ion-label position="stacked">Email</ion-label>
@@ -52,10 +54,11 @@
       <ion-input type="password" [(ngModel)]='password'></ion-input>
     </ion-item>
 
-    <ion-button (click)='login()' expand='block'>Login</ion-button>
+    <ion-button (click)='login()' expand='block'>Entrar</ion-button>
     <br>
     
   </div>
+
               </ion-card>
             </ion-content>
           </ng-template>
