--- a/src/app/pages/clinica/clinica.page.html
+++ b/src/app/pages/clinica/clinica.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button text="Voltar"></ion-back-button>
     </ion-buttons>
-    <ion-title>clinica</ion-title>
+    <ion-title><strong>CLINICAS</strong></ion-title>
   </ion-toolbar>
 </ion-header>
 
