--- a/src/app/pages/historico/historico.page.html
+++ b/src/app/pages/historico/historico.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button text="Voltar"></ion-back-button>
     </ion-buttons>
-    <ion-title>historico</ion-title>
+      <ion-title><strong>HISTORICO</strong></ion-title>
   </ion-toolbar>
 </ion-header>
 
