--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>  
-    <ion-title>home</ion-title>
+    <ion-title><strong>HOME</strong></ion-title>
   </ion-toolbar>
 </ion-header>
 
