--- a/src/app/pages/tour/tour.page.html
+++ b/src/app/pages/tour/tour.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Inicio</ion-title>
+    <ion-title><strong>INICIO</strong></ion-title>
   </ion-toolbar>
 </ion-header>
 
