--- a/src/app/pages/clinica/clinica.page.scss
+++ b/src/app/pages/clinica/clinica.page.scss
@@ -1,7 +1,7 @@
-button-del{
-    padding-left: 500px;
+.buttonEdit{
+    padding-top: 10px;
 }
 
-button-edit{
-
+.buttonEdit{
+    padding-top: 10px;  
 }
