--- a/src/app/pages/clinica/clinica.page.html
+++ b/src/app/pages/clinica/clinica.page.html
@@ -19,8 +19,8 @@
             <ion-card-title><strong>{{clinicas.nomeclinica}}</strong></ion-card-title>
             <ion-card-subtitle><strong>Endereço: </strong>{{clinicas.endereco}}</ion-card-subtitle>
             <ion-card-subtitle><strong>Bairro: </strong>{{clinicas.bairro}}</ion-card-subtitle>
-            <ion-icon color="warning" class="button-edit" [routerLink]="['/clinica-update',clinicas.id]" name="create-outline"></ion-icon>
-            <ion-icon color="danger" class="button-del" (click)="deletar(clinicas.id)" name="trash">Excluir</ion-icon>
+            <ion-icon class="buttonEdit" color="primary" size="large" [routerLink]="['/clinica-update',clinicas.id]" name="create-outline"></ion-icon>
+            <ion-icon class="buttonDel" size="large" (click)="deletar(clinicas.id)" name="trash">Excluir</ion-icon>
             </ion-card-header>
             </ion-item>
         </ion-card>
