--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -17,7 +17,7 @@
           <ion-item-sliding *ngFor="let clientes of listaClientes">
             <ion-card [routerLink]="['/perfil-update',clientes.id]">
             <ion-item>
-            <ion-thumbnail><img alt="Perfil" src="https://cdn.pixabay.com/photo/2018/04/18/18/56/user-3331256__340.png"/></ion-thumbnail>   
+            <ion-thumbnail><img alt="Perfil" src="https://upload.wikimedia.org/wikipedia/commons/9/99/Sample_User_Icon.png"/></ion-thumbnail>   
             <ion-card-header >
             <ion-card-title><strong>Nome: </strong>{{clientes.nomecliente}}</ion-card-title>
             <ion-card-subtitle><strong>Endereço: </strong>{{clientes.endereco}}</ion-card-subtitle>
