--- a/src/app/pages/suporte/suporte.page.html
+++ b/src/app/pages/suporte/suporte.page.html
@@ -77,7 +77,7 @@
       <ion-card>
         <ion-item>
         <ion-thumbnail>
-          <img alt="Silhouette of mountains" src="https://cdn-icons-png.flaticon.com/512/5199/5199662.png" />
+          <img alt="Acompanhe" src="https://cdn-icons-png.flaticon.com/512/5199/5199662.png" />
         </ion-thumbnail> 
         <ion-card-header>
         <ion-card-subtitle><strong>Requisicao:</strong> {{requisicoes.id}}</ion-card-subtitle>
