--- a/src/app/pages/tour/tour.page.html
+++ b/src/app/pages/tour/tour.page.html
@@ -23,26 +23,34 @@
     </ion-slide>
   </ion-slides>
 
+
+
+
   <ion-grid>
     <ion-row>
       <ion-col size="6" size-md="4" size-lg="2"><ion-button  id="open-modal"expand="block">Login</ion-button>
         <ion-modal trigger="open-modal" (willDismiss)="onWillDismiss($event)">
           <ng-template>
             <ion-header>
+              
               <ion-toolbar>
-                <ion-buttons slot="start">
-                  <ion-button (click)="cancel()">Cancelar</ion-button>
+                <ion-buttons slot="end">
+                  <ion-icon size="large" class="buttonClose" (click)="cancel()" name="close-outline"></ion-icon>
                 </ion-buttons>
-                <ion-title>LOGIN</ion-title>
-
+                <ion-title><strong>LOGIN</strong></ion-title>
               </ion-toolbar>
             </ion-header>
-            <ion-content class="ion-padding">
-              <ion-card>
 
+            <!-- <ion-card>
 
-<div class="form">
+            </ion-card> -->
 
+<ion-content class="ion-padding">
+  <ion-card>
+    <div class="form">
+      <ion-card-header>
+        <img src="assets/img/logo.png"/>  
+      </ion-card-header>
     <ion-item>
       <ion-label position="stacked">Email</ion-label>
       <ion-input type="email" [(ngModel)]='email'></ion-input>
@@ -59,8 +67,8 @@
     
   </div>
 
-              </ion-card>
-            </ion-content>
+    </ion-card>
+</ion-content>
           </ng-template>
         </ion-modal>
       </ion-col>
