--- a/src/app/pages/agendamento/agendamento.page.html
+++ b/src/app/pages/agendamento/agendamento.page.html
@@ -1,16 +1,13 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button text="Voltar"></ion-back-button>
+      <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Agendamento</ion-title>
+    <ion-title><strong>AGENDAMENTO</strong></ion-title>
   </ion-toolbar>
 </ion-header>
 
-
 <ion-content>
-
-
 
   <ion-content class="ion-pading">
     <div class="form">
