--- a/src/app/pages/clinica-update/clinica-update.page.html
+++ b/src/app/pages/clinica-update/clinica-update.page.html
@@ -1,24 +1,29 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button text="Voltar"></ion-back-button>
+      <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>clinica_update</ion-title>
+    <ion-title><strong>ATUALIZAR</strong></ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <!-- <form #form="ngForm" (ngSubmit)="update(form)">
-
-    <ion-card>
-      <img [src]="image" />
-      <ion-card-header>
-        <ion-card-title>{{clinicas.nomeclinica}}</ion-card-title>
-      </ion-card-header>
+  
+  <ion-card>
+    <img [src]="image" />
+    <ion-card-header>
+      <ion-card-title>{{clinicas.nomeclinica}}</ion-card-title>
+    </ion-card-header>
     
+    <form #form="ngForm" (ngSubmit)="update(form)">
       <ion-card-content>
-        <ion-label><strong>Clinica</strong></ion-label>
+        <ion-label><strong>Nome</strong></ion-label>
         <ion-input type="text" name="nomeclinica" [ngModel]="clinicas.nomeclinica"></ion-input>
+      </ion-card-content>
+
+      <ion-card-content>
+        <ion-label><strong>CNPJ:</strong></ion-label>
+        <ion-input arrow="4" type="text" name="cnpj" [ngModel]="clinicas.cnpj"></ion-input>
       </ion-card-content>
 
       <ion-card-content>
@@ -30,14 +35,39 @@
         <ion-label><strong>Bairro:</strong></ion-label>
         <ion-input arrow="4" type="text" name="bairro" [ngModel]="clinicas.bairro"></ion-input>
       </ion-card-content>
-      
-      <ion-card-content>
-        <ion-label><strong>Horario:</strong></ion-label>
-        <ion-input arrow="4" type="time" name="horario" [ngModel]="clinicas.horario"></ion-input>
-      </ion-card-content>
-         
-      <ion-button type="submit" color="success" expand="block">Atualizar</ion-button>
 
-    </ion-card>
-    </form> -->
+      <ion-card-content position="stacked" >
+        <ion-label><strong>Horarios:</strong></ion-label>
+        <ion-select [ngModel]="clinicas.horario" name="horario" placeholder="{{clinicas.horario}}" [multiple]="true">
+          <ion-select-option name="08:00 - 09:00" type="text">08:00 - 09:00</ion-select-option>
+          <ion-select-option name="09:00 - 10:00" type="text">09:00 - 10:00</ion-select-option>
+          <ion-select-option name="10:00 - 11:00" type="text">10:00 - 11:00</ion-select-option>
+          <ion-select-option name="11:00 - 12:00" type="text">11:00 - 12:00</ion-select-option>
+          <ion-select-option name="12:00 - 13:00" type="text">12:00 - 13:00</ion-select-option>
+          <ion-select-option name="13:00 - 14:00" type="text">13:00 - 14:00</ion-select-option>
+          <ion-select-option name="14:00 - 15:00" type="text">14:00 - 15:00</ion-select-option>
+          <ion-select-option name="15:00 - 16:00" type="text">15:00 - 16:00</ion-select-option>
+          <ion-select-option name="16:00 - 17:00" type="text">16:00 - 17:00</ion-select-option>
+          <ion-select-option name="17:00 - 18:00" type="text">17:00 - 18:00</ion-select-option>
+          <ion-select-option name="18:00 - 19:00" type="text">18:00 - 19:00</ion-select-option>
+        </ion-select>
+      </ion-card-content>
+
+
+      <ion-card-content position="stacked" >
+        <ion-label><strong>Dias:</strong></ion-label>
+        <ion-select [ngModel]="clinicas.dia" name="dia" placeholder="{{clinicas.dia}}" [multiple]="true">
+          <ion-select-option name="Segunda-feira" type="text">Segunda-feira</ion-select-option>
+          <ion-select-option name="Terça-feira" type="text">Terça-feira</ion-select-option>
+          <ion-select-option name="Quarta-feira" type="text">Quarta-feira</ion-select-option>
+          <ion-select-option name="Quinta-feira" type="text">Quinta-feira</ion-select-option>
+          <ion-select-option name="Sexta-feira" type="text">Sexta-feira</ion-select-option>
+          <ion-select-option name="Sábado" type="text">Sábado</ion-select-option>
+        </ion-select>
+      </ion-card-content>
+
+      <ion-button type="submit" color="success" expand="block">Atualizar</ion-button>
+    </form>
+    
+  </ion-card>
 </ion-content>
