--- a/src/app/pages/clinica/clinica.page.html
+++ b/src/app/pages/clinica/clinica.page.html
@@ -1,18 +1,14 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button text="Voltar"></ion-back-button>
+      <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>clinica</ion-title>
+    <ion-title><strong>CLINICAS</strong></ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
     <ion-card>
-      <ion-card-header>
-        <ion-card-title>Clínicas parceiras</ion-card-title>
-      </ion-card-header>
-    
       <ion-card-content>
         <ion-list> 
           <ion-item-sliding *ngFor="let clinicas of listaClinicas">
@@ -20,11 +16,13 @@
             <ion-item>
             <ion-thumbnail><img alt="Clinica" src="https://cdn-icons-png.flaticon.com/512/2222/2222671.png" /></ion-thumbnail>   
             <ion-card-header>
-            <ion-card-title><strong>Clínica: </strong>{{clinicas.nomeclinica}}</ion-card-title>
+            <ion-card-title><strong>{{clinicas.nomeclinica}}</strong></ion-card-title>
             <ion-card-subtitle><strong>Endereço: </strong>{{clinicas.endereco}}</ion-card-subtitle>
             <ion-card-subtitle><strong>Bairro: </strong>{{clinicas.bairro}}</ion-card-subtitle>
-            <ion-icon color="warning" class="button-edit" [routerLink]="['/clinica-update',clinicas.id]" name="create-outline"></ion-icon>
-            <ion-icon color="danger" class="button-del" (click)="deletar(clinicas.id)" name="trash">Excluir</ion-icon>
+            <ion-card-subtitle><strong>Dia: </strong>{{clinicas.dia}}</ion-card-subtitle>
+            <ion-card-subtitle><strong>Horario: </strong>{{clinicas.horario}}</ion-card-subtitle>
+            <ion-icon class="buttonEdit" color="primary" size="large" [routerLink]="['/clinica-update',clinicas.id]" name="create-outline"></ion-icon>
+            <ion-icon class="buttonDel" size="large" (click)="deletar(clinicas.id)" name="trash">Excluir</ion-icon>
             </ion-card-header>
             </ion-item>
         </ion-card>
