--- a/src/app/pages/historico/historico.page.html
+++ b/src/app/pages/historico/historico.page.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button text="Voltar"></ion-back-button>
+      <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>historico</ion-title>
+      <ion-title><strong>HISTORICO</strong></ion-title>
   </ion-toolbar>
 </ion-header>
 
