--- a/src/app/pages/tour/tour.page.html
+++ b/src/app/pages/tour/tour.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>tour</ion-title>
+    <ion-title><strong>INICIO</strong></ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -23,24 +23,34 @@
     </ion-slide>
   </ion-slides>
 
+
+
+
   <ion-grid>
     <ion-row>
       <ion-col size="6" size-md="4" size-lg="2"><ion-button  id="open-modal"expand="block">Login</ion-button>
         <ion-modal trigger="open-modal" (willDismiss)="onWillDismiss($event)">
           <ng-template>
             <ion-header>
+              
               <ion-toolbar>
-                <ion-buttons slot="start">
-                  <ion-button (click)="cancel()">Cancel</ion-button>
+                <ion-buttons slot="end">
+                  <ion-icon size="large" class="buttonClose" (click)="cancel()" name="close-outline"></ion-icon>
                 </ion-buttons>
-                <ion-title>Welcome</ion-title>
-
+                <ion-title><strong>LOGIN</strong></ion-title>
               </ion-toolbar>
             </ion-header>
-            <ion-content class="ion-padding">
-              <ion-card>
-                <div class="form">
 
+            <!-- <ion-card>
+
+            </ion-card> -->
+
+<ion-content class="ion-padding">
+  <ion-card>
+    <div class="form">
+      <ion-card-header>
+        <img src="assets/img/logo.png"/>  
+      </ion-card-header>
     <ion-item>
       <ion-label position="stacked">Email</ion-label>
       <ion-input type="email" [(ngModel)]='email'></ion-input>
@@ -52,12 +62,13 @@
       <ion-input type="password" [(ngModel)]='password'></ion-input>
     </ion-item>
 
-    <ion-button (click)='login()' expand='block'>Login</ion-button>
+    <ion-button (click)='login()' expand='block'>Entrar</ion-button>
     <br>
     
   </div>
-              </ion-card>
-            </ion-content>
+
+    </ion-card>
+</ion-content>
           </ng-template>
         </ion-modal>
       </ion-col>
